# Terraform_EKS

./: .gitignore  README.md  data.tf  locals.tf  main.tf  output.tf  project_info.md  provider.tf  setup-backend.sh  terraform.tfvars.example  variables.tf  versions.tf
EKS-terraform/: README.md  data.tf  local.tf  output.tf
EKS-terraform/modules/Karpenter/: README.md  main.tf  provisioner.yaml  variable.tf
EKS-terraform/modules/eks-cluster/: README.md  data.tf  oidc.tf  output.tf  variables.tf
EKS-terraform/modules/iam_role/: README.md  main.tf  output.tf
EKS-terraform/modules/node_group/: README.md  main.tf  variables.tf
EKS-terraform/modules/vpc/: README.md  eip.tf  ngw.tf  output.tf  route_table.tf  sg.tf  variables.tf  vpc.tf
modules/eks-cluster/: README.md  cluster.tf  eks_addon.tf
modules/iam_role/: README.md  main.tf  output.tf  variables.tf
modules/node_group/: README.md  main.tf  output.tf
modules/vpc/: README.md  igw.tf  output.tf  subnet.tf  vpc.tf
rust-app/: Cargo.toml  Dockerfile  README.md  build-and-deploy.sh
rust-app/k8s/: deployment.yaml
rust-app/src/: main.rs
